Changes in packages url

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yieldstudio/nova-google-autocomplete",
+    "name": "slavos/nova-google-autocomplete",
     "description": "A Laravel Nova Google autocomplete field.",
     "keywords": [
         "yieldstudio",
@@ -9,7 +9,7 @@
         "autocomplete",
         "address"
     ],
-    "homepage": "https://github.com/YieldStudio/nova-google-autocomplete",
+    "homepage": "https://github.com/slavos/nova-google-autocomplete",
     "license": "MIT",
     "authors": [
         {
@@ -37,13 +37,13 @@
     },
     "autoload": {
         "psr-4": {
-            "YieldStudio\\NovaGoogleAutocomplete\\": "src/"
-        }
+            "slavos\\NovaGoogleAutocomplete\\": "src/"
+        
     },
     "extra": {
         "laravel": {
             "providers": [
-                "YieldStudio\\NovaGoogleAutocomplete\\FieldServiceProvider"
+                "slavos\\NovaGoogleAutocomplete\\FieldServiceProvider"
             ]
         }
     },
