--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
     },
     "autoload": {
         "psr-4": {
-            "slavos\\NovaGoogleAutocomplete\\": "src/"
-        
+            "YieldStudio\\NovaGoogleAutocomplete\\": "src/"
+        }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "slavos\\NovaGoogleAutocomplete\\FieldServiceProvider"
+                "YieldStudio\\NovaGoogleAutocomplete\\FieldServiceProvider"
             ]
         }
     },
